# Vsmart-api

./: .env  .gitignore  README.md  embedding_cache.pkl  main.py  pyproject.toml
parsed_resumes/: resume-Final_resume.json  resume-Final_resume.txt
